MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist_Items__c/Process_Checklist_Items__c.object-meta.xml
<CustomObject>
    <label>Process Checklist Items</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Process Checklist Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Checklist Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>