MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist_Items__c/fields/Checker_Action__c.field-meta.xml
<CustomField>
    <fullName>Checker_Action__c</fullName>
    <label>Checker Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>