MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist_Items__c/fields/Checker_Comments__c.field-meta.xml
<CustomField>
    <fullName>Checker_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Checker Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>