MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist_Items__c/fields/Checklist_Name__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Checklist Name</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>