MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist_Items__c/fields/Checklist_Progress__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Progress__c</fullName>
    <label>Checklist Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maker Accepted</fullName>
                <default>true</default>
                <label>Maker Accepted</label>
            </value>
            <value>
                <fullName>Checker Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>