MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist_Items__c/fields/Maker_Rejection_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Maker_Rejection_Reasons__c</fullName>
    <label>Maker Rejection Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documents Not Clear</fullName>
            </value>
            <value>
                <fullName>Required More Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>