MODON MRE BPDEV/force-app/main/default/objects/Process_Checklist_Items__c/fields/Process_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Process_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Checklist</label>
    <referenceTo>Process_Checklist__c</referenceTo>
    <relationshipLabel>Process Checklist Items</relationshipLabel>
    <relationshipName>Process_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>